# EcoMentor-AI

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  firebase.json  pyproject.toml
.github/workflows/: backend-ci.yml  deploy.yml
backend/: .env.example  Dockerfile  firestore.indexes.json  firestore.rules  main.py  pytest.ini  requirements.txt  test_query.py
backend/app/: __init__.py  config.py  extensions.py
backend/app/middleware/: auth_middleware.py  csrf.py  errors.py
backend/app/models/: __init__.py  activity.py  ai_report.py  carbon_history.py  challenge.py  footprint.py  leaderboard_entry.py  recommendation.py  report.py  user.py
backend/app/repositories/: __init__.py  activity_repository.py  ai_report_repository.py  base_repository.py  (+7 more)
backend/tests/: conftest.py
docs/: accessibility.md  architecture.md  security.md
frontend/: .env.example  404.html  index.html  manifest.json  package-lock.json  package.json  sw.js  vite.config.js  vitest.config.js
frontend/css/: base.css  components.css  dashboard.css  layout.css  premium-home.css  reset.css  style.css  utilities.css  variables.css
frontend/js/: achievements.js  activities.js  api-client.js  auth.js  auth_guard.js  auth_service.js  coach.js  dashboard.js  firebase.js  home.js  leaderboard.js  main.js  profile.js  report.js  router.js  settings.js  skeletons.js  store.js  theme.js  utils.js
frontend/scripts/: generate-firebase-json.js
frontend/tests/: accessibility.test.js  activities.test.js  auth.test.js  coach.test.js  google_auth.test.js  main.test.js  setup.js
(+79 files in other folders)
