[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ecomentor-ai"
version = "1.0.0"
description = "AI-powered environmental impact tracker"
requires-python = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-p", "no:cacheprovider",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-fail-under=40",
]
markers = [
    "unit: Unit tests (services, repositories in isolation)",
    "integration: Integration tests (blueprints, API contracts)",
    "slow: Slow tests (external API calls, heavy computation)",
]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
